Setup text TODO: fix alignment of descriptive text

--- a/main.css
+++ b/main.css
@@ -4,7 +4,8 @@ body {
     font-family: 'open-sans', sans-serif;
     /* background-color: #fdf800; */
     /* color: blue; */
-    background-color: #222629;
+    /* background-color: #222629; */
+    background-color: #242624;
     color: #6B6E70;
 }
 
@@ -32,7 +33,8 @@ a {
 ul {
     display: flex;
     justify-content: space-between;
-    width: 100%
+    width: 80%
+    /* padding: 0 10%; */
 }
 
 ul li {
@@ -45,7 +47,7 @@ nav {
     margin: 1% 1%;
     /* background: #6B6E70; */
     display: grid;
-    grid-template-columns: 2fr 7fr 2fr;
+    grid-template-columns: 1fr 8fr 1fr;
     /* justify-content: center;
     align-content: center;
     text-align: center;
@@ -87,6 +89,7 @@ nav {
 
 .grid-item {
     padding: 2% 2%;
+
 }
 
 /* .internal-item {
@@ -102,7 +105,7 @@ nav {
     align-items: center;
     /* place-self: center center; */
     justify-content: space-evenly;
-    /* grid-gap: 20px */
+    grid-gap: 20px
 }
 
 .photo {
@@ -115,8 +118,30 @@ nav {
 }
 
 .internal-item img{
-    max-height: 100%;
+    max-height: 400px;
     max-width: 100%;
+    border: 5px solid #6B6E70;
+}
+
+/* CV */
+
+.internal-text {
+    display: grid;
+    grid-template-columns: 3fr 9fr;
+    grid-gap: 0 20px;
+}
+
+.title-text {
+    display: flexbox;
+    text-align: right;
+    text-justify: top;
+}
+
+.body-text {
+    display: flexbox;
+    text-align: left;
+    text-justify: top;
+    vertical-align: top;
 }
 
 /* Footer */
